--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Alex Hernandez <porialex@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
     "vuepress": "^0.10.0"
   }
 }
